Update index.html via editor

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 <div class="w-10 h-10 custom-bg-primary rounded-full flex items-center justify-center">
                     <i class="fas fa-gift text-white text-lg"></i>
                 </div>
-                <span class="text-2xl font-bold custom-primary">AmexCard</span>
+                <span class="text-2xl font-bold custom-primary">AmexGiftCard.com/Balance</span>
             </div>
             
             <!-- Desktop Menu -->
